--- a/DecisionTreeProject.ipynb
+++ b/DecisionTreeProject.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DecisionTreeProject.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOagMu8Di1YADwLxCJq24dV",
+      "authorship_tag": "ABX9TyOACWjdJIap8hQVUTmJEGMW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,9 +39,10 @@
         "import matplotlib.pyplot as plt\n",
         "from sklearn.model_selection import KFold, cross_val_score\n",
         "from sklearn.model_selection import GridSearchCV\n",
-        "import math\n"
+        "import math\n",
+        "import time"
       ],
-      "execution_count": 302,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -51,13 +52,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NoW3nCDNk4f6",
-        "outputId": "dc69366f-cdd5-4dd0-af5a-fc6d70508c69"
+        "outputId": "8048ae5f-4582-424b-9d41-430ae5ed9a94"
       },
       "source": [
         "df=pd.read_csv('heart_failure_clinical_records_dataset.csv')\n",
         "df['DEATH_EVENT'].value_counts()"
       ],
-      "execution_count": 303,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -71,7 +72,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 303
+          "execution_count": 37
         }
       ]
     },
@@ -83,12 +84,12 @@
           "height": 304
         },
         "id": "bVtQEAu7lJsx",
-        "outputId": "3e52a1d6-d4a6-4d78-a7c2-2c11c0ff5e5e"
+        "outputId": "65ca538d-0439-4c0b-e855-70c2db33f86d"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 304,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -277,7 +278,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 304
+          "execution_count": 38
         }
       ]
     },
@@ -289,7 +290,7 @@
       "source": [
         ""
       ],
-      "execution_count": 304,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -302,7 +303,7 @@
         "       'ejection_fraction', 'high_blood_pressure', 'platelets',\n",
         "       'serum_creatinine', 'serum_sodium', 'sex', 'smoking', 'time']].values\n"
       ],
-      "execution_count": 305,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -313,7 +314,7 @@
       "source": [
         "y = df['DEATH_EVENT'].values\n"
       ],
-      "execution_count": 306,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -324,7 +325,7 @@
       "source": [
         "\n"
       ],
-      "execution_count": 306,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -407,7 +408,7 @@
         "                best_split_value = value\n",
         "    return best_split_column, best_split_value\n",
         "\n",
-        "def decision_tree_algorithm(df, counter=0, min_samples = 2, max_depth=10):\n",
+        "def decision_tree_algorithm(df, counter=0, min_samples = 2, max_depth=5):\n",
         "\n",
         "    if counter == 0:\n",
         "        global COLUMN_HEADERS\n",
@@ -491,7 +492,7 @@
         "    \n",
         "    return accuracy"
       ],
-      "execution_count": 307,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -502,7 +503,7 @@
       "source": [
         "\n"
       ],
-      "execution_count": 307,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -513,7 +514,7 @@
       "source": [
         ""
       ],
-      "execution_count": 307,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -523,7 +524,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ac8f1533-3b33-4efb-92b6-90c05b157115"
+        "outputId": "29765045-95cf-4fc3-a720-ca9e73a72011"
       },
       "source": [
         "kfold = KFold(n_splits=10)\n",
@@ -531,7 +532,7 @@
         "print('Train set:', X_train.shape, y_train.shape)\n",
         "print('Test set:', X_test.shape, y_test.shape)"
       ],
-      "execution_count": 308,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
@@ -551,10 +552,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 343
         },
-        "outputId": "53b12f6d-f75d-43c1-ad04-6d08429b75c2"
+        "outputId": "7b440079-f64b-4622-f7ab-072c270e41f0"
       },
       "source": [
-        "dtc = DecisionTreeClassifier(random_state=0)\n",
+        "\n",
         "tree_model = dtc.fit(X_train,y_train)\n",
         "kfold.split(X_train)\n",
         "dtc_accuracy_model = []\n",
@@ -568,6 +569,7 @@
         "    y_train, y_test = y[train_index], y[test_index]\n",
         "    \n",
         "    start = int(round(time.time() * 1000))\n",
+        "    dtc = DecisionTreeClassifier(criterion='entropy',random_state=0)\n",
         "    # Train the model\n",
         "    tree_model = dtc.fit(X_train, y_train)\n",
         "    # Append to accuracy_model the accuracy of the model\n",
@@ -595,7 +597,7 @@
         "results_df['%diff'] = diff\n",
         "results_df"
       ],
-      "execution_count": 309,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,82 +632,82 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>100.0</td>\n",
-              "      <td>4</td>\n",
+              "      <td>5</td>\n",
               "      <td>80.000000</td>\n",
-              "      <td>476</td>\n",
-              "      <td>11900.000000</td>\n",
+              "      <td>340</td>\n",
+              "      <td>6800.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>100.0</td>\n",
               "      <td>3</td>\n",
               "      <td>80.000000</td>\n",
-              "      <td>421</td>\n",
-              "      <td>14033.333333</td>\n",
+              "      <td>324</td>\n",
+              "      <td>10800.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>100.0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>76.666667</td>\n",
-              "      <td>386</td>\n",
-              "      <td>19300.000000</td>\n",
+              "      <td>3</td>\n",
+              "      <td>83.333333</td>\n",
+              "      <td>330</td>\n",
+              "      <td>11000.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>100.0</td>\n",
               "      <td>2</td>\n",
               "      <td>73.333333</td>\n",
-              "      <td>354</td>\n",
-              "      <td>17700.000000</td>\n",
+              "      <td>330</td>\n",
+              "      <td>16500.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>100.0</td>\n",
-              "      <td>4</td>\n",
-              "      <td>86.666667</td>\n",
-              "      <td>364</td>\n",
-              "      <td>9100.000000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>83.333333</td>\n",
+              "      <td>297</td>\n",
+              "      <td>14850.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>100.0</td>\n",
               "      <td>3</td>\n",
-              "      <td>83.333333</td>\n",
-              "      <td>367</td>\n",
-              "      <td>12233.333333</td>\n",
+              "      <td>80.000000</td>\n",
+              "      <td>334</td>\n",
+              "      <td>11133.333333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>100.0</td>\n",
               "      <td>2</td>\n",
-              "      <td>70.000000</td>\n",
-              "      <td>395</td>\n",
-              "      <td>19750.000000</td>\n",
+              "      <td>73.333333</td>\n",
+              "      <td>330</td>\n",
+              "      <td>16500.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>7</th>\n",
               "      <td>100.0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>66.666667</td>\n",
-              "      <td>375</td>\n",
-              "      <td>12500.000000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>76.666667</td>\n",
+              "      <td>298</td>\n",
+              "      <td>14900.000000</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>8</th>\n",
               "      <td>100.0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>86.666667</td>\n",
-              "      <td>403</td>\n",
-              "      <td>20150.000000</td>\n",
+              "      <td>3</td>\n",
+              "      <td>80.000000</td>\n",
+              "      <td>307</td>\n",
+              "      <td>10233.333333</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>9</th>\n",
               "      <td>100.0</td>\n",
               "      <td>3</td>\n",
-              "      <td>82.758621</td>\n",
-              "      <td>439</td>\n",
-              "      <td>14633.333333</td>\n",
+              "      <td>93.103448</td>\n",
+              "      <td>332</td>\n",
+              "      <td>11066.666667</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -713,16 +715,16 @@
             ],
             "text/plain": [
               "   dtc_accuracy_model  dtc_model_time  ...  mydtc_model_time         %diff\n",
-              "0               100.0               4  ...               476  11900.000000\n",
-              "1               100.0               3  ...               421  14033.333333\n",
-              "2               100.0               2  ...               386  19300.000000\n",
-              "3               100.0               2  ...               354  17700.000000\n",
-              "4               100.0               4  ...               364   9100.000000\n",
-              "5               100.0               3  ...               367  12233.333333\n",
-              "6               100.0               2  ...               395  19750.000000\n",
-              "7               100.0               3  ...               375  12500.000000\n",
-              "8               100.0               2  ...               403  20150.000000\n",
-              "9               100.0               3  ...               439  14633.333333\n",
+              "0               100.0               5  ...               340   6800.000000\n",
+              "1               100.0               3  ...               324  10800.000000\n",
+              "2               100.0               3  ...               330  11000.000000\n",
+              "3               100.0               2  ...               330  16500.000000\n",
+              "4               100.0               2  ...               297  14850.000000\n",
+              "5               100.0               3  ...               334  11133.333333\n",
+              "6               100.0               2  ...               330  16500.000000\n",
+              "7               100.0               2  ...               298  14900.000000\n",
+              "8               100.0               3  ...               307  10233.333333\n",
+              "9               100.0               3  ...               332  11066.666667\n",
               "\n",
               "[10 rows x 5 columns]"
             ]
@@ -730,7 +732,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 309
+          "execution_count": 43
         }
       ]
     },
@@ -741,12 +743,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rzjvZdpGXxOa",
-        "outputId": "408ed202-7843-4729-a7b2-47a9edfaa4a1"
+        "outputId": "dd4eb55f-b339-4cf4-fdc0-12c56073b1fd"
       },
       "source": [
         "tree"
       ],
-      "execution_count": 310,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,37 +756,20 @@
             "text/plain": [
               "{'time <= 67.5': [{'platelets <= 214500.0': [1.0,\n",
               "    {'platelets <= 224500.0': [{'time <= 57.0': [0.0, 1.0]},\n",
-              "      {'age <= 66.5': [{'creatinine_phosphokinase <= 85.5': [0.0,\n",
-              "          {'platelets <= 307500.0': [{'time <= 24.5': [1.0,\n",
-              "              {'serum_sodium <= 134.5': [1.0,\n",
-              "                {'serum_sodium <= 142.5': [0.0, 1.0]}]}]},\n",
-              "            1.0]}]},\n",
+              "      {'age <= 66.5': [{'creatinine_phosphokinase <= 85.5': [0.0, 1.0]},\n",
               "        1.0]}]}]},\n",
               "  {'serum_creatinine <= 1.55': [{'ejection_fraction <= 27.5': [{'time <= 78.5': [1.0,\n",
-              "        {'time <= 148.0': [0.0,\n",
-              "          {'time <= 178.0': [1.0,\n",
-              "            {'time <= 210.5': [0.0,\n",
-              "              {'serum_creatinine <= 0.9500000000000001': [0.0, 1.0]}]}]}]}]},\n",
-              "      {'age <= 79.0': [{'creatinine_phosphokinase <= 2307.5': [{'serum_creatinine <= 0.6499999999999999': [{'time <= 123.0': [0.0,\n",
-              "              1.0]},\n",
-              "            {'platelets <= 349500.0': [0.0,\n",
-              "              {'serum_creatinine <= 1.2000000000000002': [0.0,\n",
-              "                {'serum_sodium <= 137.5': [1.0, 0.0]}]}]}]},\n",
-              "          {'diabetes <= 0.5': [0.0, 1.0]}]},\n",
-              "        {'platelets <= 239000.0': [{'sex <= 0.5': [1.0, 0.0]}, 1.0]}]}]},\n",
+              "        0.0]},\n",
+              "      {'age <= 79.0': [0.0, {'platelets <= 239000.0': [0.0, 1.0]}]}]},\n",
               "    {'ejection_fraction <= 22.5': [1.0,\n",
               "      {'creatinine_phosphokinase <= 72.5': [0.0,\n",
-              "        {'high_blood_pressure <= 0.5': [{'platelets <= 226000.0': [{'serum_sodium <= 137.5': [1.0,\n",
-              "              {'serum_sodium <= 142.5': [0.0, 1.0]}]},\n",
-              "            {'sex <= 0.5': [{'creatinine_phosphokinase <= 454.0': [0.0, 1.0]},\n",
-              "              0.0]}]},\n",
-              "          1.0]}]}]}]}]}"
+              "        {'high_blood_pressure <= 0.5': [0.0, 1.0]}]}]}]}]}"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 310
+          "execution_count": 44
         }
       ]
     },
@@ -796,7 +781,7 @@
       "source": [
         ""
       ],
-      "execution_count": 310,
+      "execution_count": 44,
       "outputs": []
     }
   ]
